# seqan-alignment-micro-bench

./: .gitignore  CMakeLists.txt  benchmark_openmp.cpp  build.sh  clean.sh  compile.sh  configure.sh  hsapiens_reads.fasta  time.sh
